--- a/crud/templates/web/admin/add_admin.html
+++ b/crud/templates/web/admin/add_admin.html
@@ -38,12 +38,12 @@
                     </div>
                     <div>
                         <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <input type="email" id="email" name="email" required
+                        <input type="email" id="email" name="email"
                                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
                         <label for="phone_number" class="block text-sm font-medium text-gray-700">Phone Number</label>
-                        <input type="tel" id="phone_number" name="phone_number" required
+                        <input type="tel" id="phone_number" name="phone_number" required maxlength="11" minlength="11"
                                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
@@ -75,10 +75,10 @@
                         <input type="date" id="date_of_birth" name="date_of_birth" required
                                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
-                    <div>
+                    <!-- <div>
                         <label for="is_active" class="block text-sm font-medium text-gray-700">Is Active</label>
                         <input type="text" id="is_active" name="is_active" value="True" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500" readonly>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="flex justify-end gap-2">
                     <button type="submit" class="px-4 py-2 bg-blue-700 text-white rounded-md hover:bg-blue-800">Add Admin</button>
