--- a/crud/templates/web/admin/add_guest.html
+++ b/crud/templates/web/admin/add_guest.html
@@ -53,7 +53,7 @@
                     </div>
                     <div>
                         <label for="phone_number" class="block text-sm font-medium text-gray-700">Phone Number</label>
-                        <input type="tel" id="phone_number" name="phone_number" required value="{{ phone_number|default:'' }}"
+                        <input type="tel" id="phone_number" name="phone_number" required value="{{ phone_number|default:'' }}" maxlength="11" minlength="11"
                             class="mt-1 block w-fit px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
